--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,5 @@
 name: Run all tests
 
-# Remove default permissions of GITHUB_TOKEN for security
-# https://docs.github.com/en/actions/using-jobs/assigning-permissions-to-jobs
-permissions: {}
-
 on:
   push:
     branches:
@@ -18,6 +14,9 @@ concurrency:
 jobs:
   unit-test:
     runs-on: ubuntu-latest
+    permissions:
+      # Required to put a comment into the PR
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -30,4 +29,9 @@ jobs:
       - run: npm ci
 
       - name: Run tests
-        run: npm run test
+        run: npm run test:coverage
+
+      - name: Report coverage
+        # Ensure this step runs even if tests fail
+        if: always()
+        uses: davelosert/vitest-coverage-report-action@v2
